# magnit_utils

./: .gitignore  AGENTS.md  ANALYTICS_TOOLKIT_MANUAL.md  README.md  pyproject.toml
analytics_toolkit/: __init__.py  cli.py
analytics_toolkit/ab_utils/: README.md  __init__.py  api.py  bootstrap.py  constants.py  cuped.py  formatter.py  metrics.py  outliers.py  parallel.py  ratio.py  rows.py  split.py  stats.py  validation.py
analytics_toolkit/dates/: README.md  __init__.py  dates.py  functions.py
analytics_toolkit/excel/: README.md  __init__.py  long_format.py
analytics_toolkit/general/: __init__.py  read_file.py
analytics_toolkit/sql/: README.md  __init__.py  async_api.py  backend_adapters.py  capabilities.py  ch_lifecycle.py  ch_options.py  identifiers.py  labels.py  operation_runner.py  plan_steps.py  plans.py  query_timing.py
analytics_toolkit/sql/_backend_adapters/: __init__.py  base.py  clickhouse.py  dbapi.py  gp.py  registry.py  trino.py  utils.py
tests/: conftest.py  sql_fakes.py  test_ab_utils_format.py  test_ab_utils_metrics.py  test_ab_utils_parallel.py  test_ab_utils_split.py  test_excel_long_format.py  test_general_read_file.py  test_sql_async.py  test_sql_backend_adapters.py  test_sql_ch_create_table_as.py  test_sql_ch_full_table_move.py  test_sql_connection_config.py  test_sql_create_table_from_sql.py  test_sql_execute_read.py  test_sql_gp_cancel.py  test_sql_improvements.py  test_sql_load_table.py  test_sql_retries.py  test_sql_transfer_clickhouse.py  test_sql_transfer_row_batches.py  test_sql_transfer_schema.py
(+42 files in other folders)
