[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics_toolkit"
version = "0.1.5.1"
description = "Shared Python utilities for SQL, Excel, and date helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi==2026.2.25",
  "charset-normalizer==3.4.7",
  "clickhouse-connect==0.15.1",
  "et_xmlfile==2.0.0",
  "gdown==5.2.0",
  "idna==3.11",
  "lz4==4.4.5",
  "openpyxl==3.1.5",
  "orjson==3.11.5",
  "pandas==2.3.3",
  "psycopg2-binary==2.9.11",
  "python-dotenv==1.1.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2026.1.post1",
  "requests==2.32.5",
  "scipy==1.17.1",
  "six==1.17.0",
  "sqlparse==0.5.3",
  "sqlglot==30.3.0",
  "tqdm==4.67.3",
  "trino==0.337.0",
  "tzlocal==5.3.1",
  "urllib3==2.6.3",
  "zstandard==0.25.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics_toolkit*"]
